# NoPass

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.github/: codeql-config.yml
.github/old_workflows/: codeql.yml.stop  nopass.yml.stop
.github/workflows/: codeql.yml  nopass.yml  rust-clippy.yml  tests-build.yml
scripts/: mold.sh
src/: main.rs
src/errors/: app_errors.rs  mod.rs  ui_errors.rs
src/handlers/: create_vault_window.rs  dialog_window.rs  main_window.rs  main_window.rs.bak  mod.rs
src/models/: mod.rs  vault.rs
src/utils/: crypto.rs  file.rs  mod.rs  zerobyte.rs
ui/: app.slint
ui/views/: setup.slint  unlock_vault.slint  vault.slint  vault_settings.slint
ui/windows/: create_vault.slint  dialog.slint  main.slint  settings.slint  setup.slint
