[package]
name = "NoPass"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["std"] }
bincode = { version = "2.0.1", features = ["serde"] }
copypasta = "0.10.2"
log = "0.4.27"
once_cell = "1.21.3"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.12.0"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
slint-build = "1.12.0"

[dev-dependencies]
tempfile = "3.20.0"
